Closed Bug 487966 Opened 15 years ago Closed 15 years ago

libreg should not use FSSpec or aliases

Categories

(Core :: General, defect)

All
macOS
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: jaas, Assigned: jaas)

References

Details

Attachments

(1 file)

FSSpec is deprecated, basically so are aliases. "libreg" should not use them. A lot of the code in libreg related to their use is problematic for 64-bit as well.
Attached patch fix v1.0Splinter Review
I don't even know what libreg is for but this seems to work without causing problems. This just makes libreg use paths like regular UNIX.
Attachment #372248 - Flags: review?(benjamin)
Attachment #372248 - Flags: review?(benjamin) → review+
pushed to mozilla-central

http://hg.mozilla.org/mozilla-central/rev/d691bf8ac0fa
Status: NEW → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: