Remove FSSpec and alias usage from libreg on Mac OS X. b=487966 r=bsmedberg